--- a/ubuntu/standard/5.0/runtimes.yml
+++ b/ubuntu/standard/5.0/runtimes.yml
@@ -51,6 +51,10 @@ runtimes:
         commands:
           - echo "Installing Go version 1.16 ..."
           - goenv global  $GOLANG_16_VERSION          
+      1.17:
+        commands:
+          - echo "Installing Go version 1.17 ..."
+          - goenv global  $GOLANG_17_VERSION
   python:
     versions:
       3.7:
